🐛 bug: fix z-index issue and add new loader

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,6 +18,7 @@ a {
 }
 
 nav {
+  z-index: 1;
   position: fixed;
   top: 0;
   width: 100vw;
